The card has is finished

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       </div>
       <div class="info">
         <h1 class="title">Tesla Rodaster</h1>
-        <h3>The quickest car in the world</h3>
-        <div class="info">
-          <div class="features">1.9s <small>0 - 60mph</small></div>
-          <div class="features">+250mph <small>Top Speed</small></div>
-          <div class="features">620mi <small>Range</small></div>
+        <h3>The quickest car in the world, with record-setting acceleration, range and performance.</h3>
+        <div class="features">
+          <div class="feature">1.9s <span>0-60mph</span></div>
+          <div class="feature">+250mph <span>Top Speed</span></div>
+          <div class="feature">620mi <span>Range</span></div>
         </div>
         <div class="reserve">
-          <a href="" class="reserve">RESERVE YOURS</a>
+          <a href="" class="reserve-button">RESERVE YOURS</a>
         </div>
       </div>
     </div>
